# gen-ai-learning

./: .gitignore  README.md  test.py  test_whatsapp_pdf.py  test_whatsapp_pdf_playwright.py  website_health_report.csv
.devcontainer/: devcontainer.json
Python_15_Days_Challenge/: README.md  README_GREETING_FORM.md  greeting_form.py  requirements.txt
flask_app/: README.md
hugging_face/: README.md  ai_gp2.py  requirements.txt
playwright_assignment/: README.md  requirements.txt  scorecard_1762493145.html
playwright_basics/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
playwright_basics/examples/: browser_example.py
playwright_basics/src/playwright_basics/: __init__.py  ajax_utils.py  browser_utils.py  form_utils.py  page_utils.py  validation_utils.py
playwright_basics/src/playwright_basics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
playwright_basics/tests/: conftest.py  run_tests.py  test_ajax_utils.py  test_form_utils.py  test_page_utils.py  test_validation_utils.py
prompt_battle/: FinalPrompt.json  README.md
pyautogui_assignment/: README.md  requirements.txt
python_basics/: .coverage  .gitignore  README.md
streamlit_assignment/: .gitignore  AUTHENTICATION_FLOW.md  COMPLETE_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  LOGIN_SETUP.md  PRODUCTION.md  README.md  README_TEST.md  TWILIO_SETUP.md  WHATSAPP_INTEGRATION.md  WHATSAPP_PDF_GUIDE.md  WHATSAPP_TWILIO_MIGRATION.md  docker-compose.yml  requirements.txt  run_streamlit.sh  whatsapp_pdf_sender.py
streamlit_webapp/: README.md  requirements.txt
(+31 files in other folders)
