[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright_basics"
version = "0.1.0"
authors = [
    { name="kanda", email="kanda@example.com" },
]
description = "Basic examples of Playwright automation framework usage"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "aiohttp>=3.9.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[project.urls]
"Homepage" = "https://github.com/yourusername/playwright_basics"
"Bug Tracker" = "https://github.com/yourusername/playwright_basics/issues"